@@ -1,5 +1,7 @@
 2015-03-16  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Adding Cuts-based constructor to PrimaryHadrons.
+
 	* Adding missing compare() method to HeavyHadrons projection.
 
 2015-03-05  Andy Buckley  <andy.buckley@cern.ch>
